--- a/RobotNavigation/RobotNavigation.csproj
+++ b/RobotNavigation/RobotNavigation.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BreadthFirstSearch.cs" />
+    <Compile Include="MazeSearch.cs" />
+    <Compile Include="State.cs" />
+    <Compile Include="MazeConfigReader.cs" />
     <Compile Include="MazeView.cs" />
     <Compile Include="Maze.cs" />
     <Compile Include="Program.cs" />
