--- a/RobotNavigation/RobotNavigation.csproj
+++ b/RobotNavigation/RobotNavigation.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="BreadthFirstSearch.cs" />
     <Compile Include="MazeSearch.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="State.cs" />
     <Compile Include="MazeConfigReader.cs" />
     <Compile Include="MazeView.cs" />
