--- a/RobotNavigation/RobotNavigation.csproj
+++ b/RobotNavigation/RobotNavigation.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Maze.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UniformCostSearch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
